feat & refactor & style: Specs forfilled, code styled

--- a/src/App.css
+++ b/src/App.css
@@ -163,12 +163,17 @@ body, .app {
 
 /* book cover */
 
-.book-cover {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  background: #eee;
-}
 .book-cover-title {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
 }
+.book-cover {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  background: #eee;
+  transition: 0.8s transform ease-out;
+}
+.book-cover:hover {
+  transform: scale(1.10);
+}
+
